# wg21-papers

./: .gitignore  CLAUDE.md  affine-awaitable-protocol.md  affine-awaitables.md  coro-first-io.md  ietf-taps-vs-asio.md  stoppable-awaitable-protocol.md  stoppable-awaitables.md  wg21-dying-knowledge.md
.github/workflows/: ci.yml
affine-awaitables/: CMakeLists.txt  affine.hpp  affine_helpers.hpp  custom_task.cpp  make_affine.hpp  senders_task.cpp  small_function.hpp  task.cpp  task.hpp  thread_pool.hpp
coro-first-io/: CLAUDE.md  CMakeLists.txt  COST.md  bench.cpp  bench_cb.hpp  bench_cb_detail.hpp  bench_co.hpp  bench_co_detail.hpp  build-msvc.bat
eval/: p2300r10.md
source/: 1-pager-priority.md  awaitable-ask.md  complement.md  d0000-field-experience.md  d0000-generative-tools-consensus-social-contract.md  d4045-response-p4043r0.md  d4048-call-to-action.md  d4050-failure-modes.md  d4050-task-diversity.md  d4053-net-comparison.md  d4054-two-error-models.md  d4055-sender-bridge.md  d4056-awaitable-sender.md  d4058-case-against.md  d4059-big-claims.md  d4060-big-reputation.md  d4061-big-humility.md  d4062-coroutine-executors.md  d4097-networking-claim.md  d4123-cost-of-senders.md  d4127-timing-problem.md  d4162-plan-for-29.md  d4165-earned-vs-imposed.md  d4166-frame-visible-coro.md  d4171-consensus-mind.md  d4177-generative-tools-consensus-social-contract.md  d4178-stdexec-self.md  p4016.md
source/network-endeavor/: cpp26-task.md  d4003-io-awaitables.cpp  d4003-io-awaitables.md  d4035-escape-hatches.md  d4088-what-coros-buy.md  d4089-task-diversity.md  d4125-field-experience.md  d4137-profile-evidence.md  d4172-io-awaitables-design.md
source/network-endeavor/todo/: d4003-io-awaitables.cpp  d4090-net-comparison.md  d4091-two-error-models.md  d4092-sender-bridge.md  d4093-awaitable-sender.md  d4096-coroutine-executors.md  d4097-networking-claim.md  d4099-networking-arc.md  d4100-network-endeavor.md  d4126-universal-continuations.md
tools/: disclose.md
